--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<img src="images/photo.jpg" width="200" class="logo rounded-circle mb-4">
 
 					<h1>Ivan Stanković</h1>
-					<p class="subtitle mt-3">Mostonga 63, Odžaci, Srbija &nbsp;|&nbsp; <a href="#">stankovicmivan@email.com</a> &nbsp;|&nbsp; (+381) 65 2645463
+					<p class="subtitle mt-3">Mostonga 63, Odžaci, Srbija &nbsp;|&nbsp; <a href="mailto:stankovicmivan@email.com">stankovicmivan@email.com</a> &nbsp;|&nbsp; (+381) 65 2645463
 
 						<p class="lead">***************************************</br>***************************************************************************************************</p>
 
