C:/Program Files/Git/update

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 	
 	<!--CSS-->
 	<link rel="stylesheet" href="css/fsvs.css">
+	
 	<link href="https://fonts.googleapis.com/css?family=Hind+Vadodara:300,400,500,600,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/chocolat.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
-
+	<link rel="stylesheet" href="css/myCss.css">
 
 
 </head>
@@ -132,7 +133,9 @@
 										<p>Using the AngularJS framework to develop client front-end MVC applications<br>Mastered a single-page application (SPA) concept<br>Pagination</p>
 									</div>
 									<div class="col-md-3">
-										<img class="" src="images/gitlogo.png" alt="Generic placeholder image" width="170" height="150">
+										<div width="170" height="150">
+										<img class="" src="images/gitlogo.png" alt="Generic placeholder image" width="170" height="100">
+										</div>
 										<p class="h1">GIT</p>
 										<p>Good knowledge of GIT ecosystem, using command line and GIT commands, working with other
 										developers on same project.</p>
@@ -190,13 +193,34 @@
 									<p class="subtitle">Java web development</p>
 								</div>
 
-								<div class="col text-left mt-md-3">
-									<p class="pl-md-2 item-description">
-										- Working variables and operators</br>
-										- Program flow control</br>
-										- Working with arrays and collections</br>
-										- Basic search and sorting algorithms</br>
-									</p>
+								<div class="container col text-left mt-md-3">
+									<table border="none" class="table">
+										<tbody>
+											<tr>
+												<td class="td">- Spring</td>
+												<td class="td">- Hibernate</td>
+												<td class="td">- REST</td>
+												<td class="td">- MVC pattern</td>
+												<td class="td">- Data Transfer Object (DTO)</td>
+											</tr>
+											<tr>
+												<td class="td">- Spring boot</td>
+												<td class="td">- JUnit</td>
+												<td class="td">- JSON</td>
+												<td class="td">- Dependency injection pattern</td>
+												<td class="td">- Maven tool</td>
+											</tr>
+											<tr>
+												<td class="td">- Hibernate</td>
+												<td class="td">- Apache Tomcat</td>
+												<td class="td">- GIT</td>
+												<td class="td">- RESTful</td>
+												<td class="td">- Single-Page Application</td>
+											</tr>
+										</tbody>
+									
+									</table>
+									
 								</div>
 							</div>
 						</div>
