update CV download link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					
 					<p class="subtitle mt-3">Mostonga 63, Odžaci, Srbija &nbsp;|&nbsp; <a href="mailto:stankovicmivan@email.com">stankovicmivan@email.com</a> &nbsp;|&nbsp; (+381) 65 2645463</p>
 					<hr class="featurette-divider">
-						<p class="lead">Hi, my name is Ivan, and I'm junior web developer. Communicative, patient, capable of working in the team as well as for individual work. I'm looking for ways to improve my knowledge in order to write a clean, sustainable code and adopt the new knowledge.  Enthusiasts for technology. My next goals are master the Spring Security and Angular</p>
+						<p class="lead">Hi, my name is Ivan, and I'm junior web developer. Communicative, patient, capable of working in team as well as for individual work. I'm looking for ways to improve my knowledge in order to write a clean, sustainable code and adopt the new knowledge.  Enthusiasts for technology. My next goals are mastering the Spring Security and Angular 6.</p>
 
 					</div>
 				</div>
