update project view

--- a/index.html
+++ b/index.html
@@ -190,83 +190,19 @@
 			<!--Gallery-->
 			<div class="row gallery chocolat-parent" data-chocolat-title="Portfolio">
 				<!--Gallery Item-->
-				<div class="col-sm-6 col-md-4 col-gallery	" data-category="1" data-sort="value">
+				<div class="col-sm-6 col-md-6 col-gallery	" data-category="1" data-sort="value">
 					<figcaption>
 						<div class="parent">
-							<img src="images/placeholder-image-1.jpg" class="img-fluid">
+							<img src="images/Project1a.jpg" class="img-fluid">
 							<div class="child ">
-								<h3>NetBanking - project</h3>
-								<p>My try to make NetBanking application</p>
-								<a href="images/placeholder-image-1.jpg" class="btn chocolat-image" title="Enter your image caption here">View Project</a>
+								<h3>SportTracking - project</h3>
+								<p>Spring application with Hibernate(MySQL) and AngularJS</p>
+								<a href="https://github.com/StankovicMivan/SpringHibernateMySQLAngularJS" class="btn chocolat-image" title="Git Java Spring Project">View Project Code</a>
 							</div>
 						</div>
 					</figcaption>
 				</div>
-				<!--Gallery Item-->
-				<div class="col-sm-6 col-md-4 col-gallery">
-					<figcaption>
-						<div class="parent">
-							<img src="images/placeholder-image-2.jpg" class="img-fluid">
-							<div class="child ">
-								<h3>Image Title</h3>
-								<p>Short description or tags here.</p>
-								<a href="images/placeholder-image-2.jpg" class="btn chocolat-image" title="Enter your image caption here">View Full Size</a>
-							</div>
-						</div>
-					</figcaption>
-				</div>
-				<!--Gallery Item-->
-				<div class="col-sm-6 col-md-4 col-gallery">
-					<figcaption>
-						<div class="parent">
-							<img src="images/placeholder-image-3.jpg" class="img-fluid">
-							<div class="child ">
-								<h3>Image Title</h3>
-								<p>Short description or tags here.</p>
-								<a href="images/placeholder-image-3.jpg" class="btn chocolat-image" title="Enter your image caption here">View Full Size</a>
-							</div>
-						</div>
-					</figcaption>
-				</div>
-				<!--Gallery Item-->
-				<div class="col-sm-6 col-md-4 col-sm-6 col-gallery">
-					<figcaption>
-						<div class="parent">
-							<img src="images/placeholder-image-4.jpg" class="img-fluid">
-							<div class="child ">
-								<h3>Image Title</h3>
-								<p>Short description or tags here.</p>
-								<a href="images/placeholder-image-4.jpg" class="btn chocolat-image" title="Enter your image caption here">View Full Size</a>
-							</div>
-						</div>
-					</figcaption>
-				</div>
-				<!--Gallery Item-->
-				<div class="col-6 col-md-4 col-sm-6 col-gallery">
-					<figcaption>
-						<div class="parent">
-							<img src="images/placeholder-image-5.jpg" class="img-fluid">
-							<div class="child ">
-								<h3>Image Title</h3>
-								<p>Short description or tags here.</p>
-								<a href="images/placeholder-image-5.jpg" class="btn chocolat-image" title="Enter your image caption here">View Full Size</a>
-							</div>
-						</div>
-					</figcaption>
-				</div>
-				<!--Gallery Item-->
-				<div class="col-6 col-md-4  col-sm-6 col-gallery">
-					<figcaption>
-						<div class="parent">
-							<img src="images/placeholder-image-6.jpg" class="img-fluid">
-							<div class="child ">
-								<h3>Image Title</h3>
-								<p>Short description or tags here.</p>
-								<a href="images/placeholder-image-6.jpg" class="btn chocolat-image" title="Enter your image caption here">View Full Size</a>
-							</div>
-						</div>
-					</figcaption>
-				</div>
+				
 			</div>
 
 		</div>
