--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 										<p>@Before, @After, @afterReturning, @AfterThrowing, @Around,Pointcut,JoinPoints</p>
 									</div>
 								</div>
-								<div class="row">									
+<!-- 								<div class="row">									
 									<div class="col-sm-6 col-md-3">
 										<img class="" src="images/.png" alt="" width="140" height="140">
 										<h2></h2>
@@ -170,7 +170,7 @@
 										<h2></h2>
 										<p></p>
 									</div>
-								</div>								
+								</div>								 -->
 							</div>
 					</div>
 				</div>
