--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 										<p>@Before, @After, @afterReturning, @AfterThrowing, @Around,Pointcut,JoinPoints</p>
 									</div>
 								</div>
-<!-- 								<div class="row">									
+								<div class="row">									
 									<div class="col-sm-6 col-md-3">
 										<img class="" src="images/.png" alt="" width="140" height="140">
 										<h2></h2>
@@ -170,7 +170,7 @@
 										<h2></h2>
 										<p></p>
 									</div>
-								</div>								 -->
+								</div>								
 							</div>
 					</div>
 				</div>
@@ -198,10 +198,25 @@
 				</div>
 				
 			</div>
-
+			<div class="row gallery chocolat-parent" data-chocolat-title="Portfolio">
+				<!--Gallery Item-->
+				<div class="col-sm-12 col-md-12 col-gallery	" data-category="1" data-sort="value">
+					<figcaption>
+						<div class="parent">
+							<img src="images/paintOnline.png" class="img-fluid">
+							<div class="child ">
+								<h3>Coming soon(Paint Online-DEMO)</h3>
+								<p>NodeJS,MongoDB,Angular</p>
+								<a href="https://github.com/StankovicMivan/PaintOnline" class="btn chocolat-image" title="Git Java Spring Project">View Project Code</a>
+							</div>
+						</div>
+					</figcaption>
+				</div>
+			</div>
 		</div>
+
 	</div>
-</div><!--/ .slide-->		
+</div><!--/ .slide-->
 			<div class="slide">
 				<div class="slide-wrapper">
 					<div class="slide-wrapper-inner">
