Update location and coming soon project

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<h1 style="font-family: ">Ivan Stanković</h1>
 					<div class="h2">Java Web Developer</div>
 					
-					<p class="subtitle mt-3">Mostonga 63, Odžaci, Srbija &nbsp;|&nbsp; <a href="mailto:stankovicmivan@email.com">stankovicmivan@email.com</a> &nbsp;|&nbsp; (+381) 65 2645463</p>
+					<p class="subtitle mt-3">Novi Sad, Srbija &nbsp;|&nbsp; <a href="mailto:stankovicmivan@email.com">stankovicmivan@email.com</a> &nbsp;|&nbsp; (+381) 65 2645463</p>
 					<hr class="featurette-divider">
 						<p class="lead">Hi, my name is Ivan, and I'm junior web developer. Communicative, patient, capable of working in team as well as for individual work. I'm looking for ways to improve my knowledge in order to write a clean, sustainable code and adopt the new knowledge.  Enthusiasts for technology. My next goals are mastering the Spring Security and Angular 6.</p>
 
